Mise à jour de la version d'angular de la version 18 à la version 19

--- a/.gitignore
+++ b/.gitignore
@@ -399,7 +399,8 @@ FodyWeavers.xsd
 /.containers/petboarding-db
 
 # Compiled output
-/dist
+dist/
+*/dist
 /tmp
 /out-tsc
 /bazel-out
@@ -427,7 +428,8 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
-/.angular/cache
+.angular/cache/
+*/.angular/cache
 .sass-cache/
 /connect.lock
 /coverage
