Ajour de la configuration pour debugger l'api avec visual sutdio code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,4 @@
 {
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
@@ -8,6 +7,20 @@
       "request": "launch",
       "preLaunchTask": "npm: start",
       "url": "http://localhost:4200/"
+    },
+    {
+      "name": "C#: Launch Api project",
+      "type": "coreclr",
+      "request": "launch",
+      "preLaunchTask": "build-api",
+      "program": "${workspaceFolder}/Core_PetBoarding_Backend/PetBoarding_Api/bin/Debug/net8.0/PetBoarding_Api.dll",
+      "cwd": "${workspaceFolder}/Core_PetBoarding_Backend/PetBoarding_Api",
+      "stopAtEntry": false,
+      "serverReadyAction": {
+        "action": "openExternally",
+        "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
+        "uriFormat": "%s/swagger"
+      }
     }
   ]
 }
