--- a/ng_PetBoarding_app/package.json
+++ b/ng_PetBoarding_app/package.json
@@ -29,9 +29,14 @@
     "@angular-devkit/build-angular": "^19.1.0",
     "@angular/cli": "~19.1.0",
     "@angular/compiler-cli": "^19.1.0",
-    "angular-eslint": "18.3.1",
-    "eslint": "^9.9.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.27.0",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "prettier": "^3.5.3",
     "typescript": "~5.5.4",
-    "typescript-eslint": "8.2.0"
+    "typescript-eslint": "8.18.0"
   }
 }
