--- a/Core_PetBoarding_Backend/docker-compose.yml
+++ b/Core_PetBoarding_Backend/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.4'
-
 services:
   petboarding_api:
     image: ${DOCKER_REGISTRY-}petboardingapi
@@ -8,8 +6,12 @@ services:
       context: .
       dockerfile: PetBoarding_Api/Dockerfile
     ports:
-      - "5000:5000"
-      - "5001:5001"
+      - '5000:5000'
+      - '5001:5001'
+    depends_on:
+      postgres.database:
+        condition: service_healthy
+    restart: unless-stopped
 
   postgres.database:
     image: postgres:latest
@@ -17,9 +19,13 @@ services:
     environment:
       - POSTGRES_DB=petboarding
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres 
+      - POSTGRES_PASSWORD=postgres
     volumes:
       - ./.containers/petboarding-db:/var/lib/postgresql/data
     ports:
       - 5432:5432
-  
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres -d petboarding']
+      interval: 5s
+      timeout: 5s
+      retries: 5
