--- a/Core_PetBoarding_Backend/docker-compose.yml
+++ b/Core_PetBoarding_Backend/docker-compose.yml
@@ -5,9 +5,16 @@ services:
     build:
       context: .
       dockerfile: PetBoarding_Api/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:5001;http://+:5000
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=password123
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
     ports:
       - '5000:5000'
       - '5001:5001'
+    volumes:
+      - ${USERPROFILE}\.aspnet\https:/https:ro
     depends_on:
       postgres.database:
         condition: service_healthy
