--- a/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.Development.json
+++ b/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=petboarding.postgres.database;Port=5432;Database=petboarding;Username=postgres;Password=postgres;Include Error Detail=true"
+    //"Database": "Host=petboarding.postgres.database;Port=5432;Database=petboarding;Username=postgres;Password=postgres;Include Error Detail=true"
+    "Database": "Host=localhost;Port=5432;Database=petboarding;Username=postgres;Password=postgres;Include Error Detail=true"
   },
   "DatabaseOptions": {
     "MaxRetry": 3,
@@ -12,11 +13,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
+    }
+  },
   "JwtOptions": {
     "Key": "986ghgrgtru989ASdsaerew13434545435",
     "Issuer": "PetBoarding",
     "Audience": "Api"
-    }
   }
 }
+
