Correction du refreshToken

--- a/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.json
+++ b/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.json
@@ -17,7 +17,9 @@
   "JwtOptions": {
     "Key": "986ghgrgtru989ASdsaerew13434545435",
     "Issuer": "PetBoarding",
-    "Audience": "Api"
+    "Audience": "Api",
+    "AccessTokenExpiryMinutes": 5,
+    "RefreshTokenExpiryMinutes": 43200
   },
   "AllowedHosts": "*"
 }
