Ajout du cache partagé MemCached

--- a/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.json
+++ b/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=petboarding.postgres.database;Port=5432;Database=petboarding;Username=postgres;Password=postgres;Include Error Detail=true"
+    "Database": "Host=petboarding.postgres.database;Port=5432;Database=petboarding;Username=postgres;Password=postgres;Include Error Detail=true",
+    "Memcached": "petboarding.memcached:11211"
   },
   "DatabaseOptions": {
     "MaxRetry": 3,
