--- a/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.Development.json
+++ b/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     //"Database": "Host=petboarding.postgres.database;Port=5432;Database=petboarding;Username=postgres;Password=postgres;Include Error Detail=true"
-    "Database": "Host=localhost;Port=5432;Database=petboarding;Username=postgres;Password=postgres;Include Error Detail=true"
+    "Database": "Host=localhost;Port=5432;Database=petboarding;Username=postgres;Password=postgres;Include Error Detail=true",
+    "Memcached": "localhost:11211"
   },
   "DatabaseOptions": {
     "MaxRetry": 3,
@@ -21,4 +22,3 @@
     "Audience": "Api"
   }
 }
-
