--- a/Core_PetBoarding_Backend/PetBoarding_Domain/PetBoarding_Domain.csproj
+++ b/Core_PetBoarding_Backend/PetBoarding_Domain/PetBoarding_Domain.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentResults" Version="4.0.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
