Mise en place de RabbitMQ et MassTransit

--- a/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.Development.json
+++ b/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.Development.json
@@ -20,5 +20,13 @@
     "Key": "986ghgrgtru989ASdsaerew13434545435",
     "Issuer": "PetBoarding",
     "Audience": "Api"
+  },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Port": 5672,
+    "Username": "petboarding",
+    "Password": "petboarding123",
+    "VirtualHost": "/",
+    "ExchangeName": "petboarding.events"
   }
 }
