--- a/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.json
+++ b/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.json
@@ -22,5 +22,13 @@
     "AccessTokenExpiryMinutes": 5,
     "RefreshTokenExpiryMinutes": 43200
   },
+  "RabbitMQ": {
+    "Host": "petboarding.rabbitmq",
+    "Port": 5672,
+    "Username": "petboarding",
+    "Password": "petboarding123",
+    "VirtualHost": "/",
+    "ExchangeName": "petboarding.events"
+  },
   "AllowedHosts": "*"
 }
