--- a/Core_PetBoarding_Backend/PetBoarding_Api/PetBoarding_Api.csproj
+++ b/Core_PetBoarding_Backend/PetBoarding_Api/PetBoarding_Api.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="9.0.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.8" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
   </ItemGroup>
 
   <ItemGroup>
