--- a/Core_PetBoarding_Backend/PetBoarding_Application/PetBoarding_Application.csproj
+++ b/Core_PetBoarding_Backend/PetBoarding_Application/PetBoarding_Application.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.14.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
+    <PackageReference Include="MassTransit.Abstractions" Version="8.5.2" />
   </ItemGroup>
 
   <PropertyGroup>
