Ajout de l'envoi d'email.

--- a/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.Development.json
+++ b/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.Development.json
@@ -13,7 +13,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "MassTransit": "Debug"
     }
   },
   "JwtOptions": {
@@ -28,5 +29,16 @@
     "Password": "petboarding123",
     "VirtualHost": "/",
     "ExchangeName": "petboarding.events"
+  },
+  "EmailSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "EnableSsl": true,
+    "Username": "guenetkevin@gmail.com",
+    "Password": "mnbxjgauhqxzdthv",
+    "FromEmail": "guenetkevin@gmail.com",
+    "FromName": "PetBoarding",
+    "ReplyToEmail": "guenetkevin@gmail.com",
+    "TemplatesPath": "Email/Templates"
   }
 }
