--- a/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.json
+++ b/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.json
@@ -30,5 +30,16 @@
     "VirtualHost": "/",
     "ExchangeName": "petboarding.events"
   },
+  "EmailSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "EnableSsl": true,
+    "Username": "guenetkevin@gmail.com",
+    "Password": "mnbxjgauhqxzdthv",
+    "FromEmail": "guenetkevin@gmail.com",
+    "FromName": "PetBoarding",
+    "ReplyToEmail": "guenetkevin@gmail.com",
+    "TemplatesPath": "Email/Templates"
+  },
   "AllowedHosts": "*"
 }
