--- a/Core_PetBoarding_Backend/Tests/ArchitectureTests/ArchitectureTests.csproj
+++ b/Core_PetBoarding_Backend/Tests/ArchitectureTests/ArchitectureTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -25,8 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\PetBoarding_Api\PetBoarding_Api.csproj" />
     <ProjectReference Include="..\..\PetBoarding_Domain\PetBoarding_Domain.csproj" />
     <ProjectReference Include="..\..\PetBoarding_Infrastructure\PetBoarding_Infrastructure.csproj" />
+    <ProjectReference Include="..\..\PetBoarding_Persistence\PetBoarding_Persistence.csproj" />
   </ItemGroup>
 
 </Project>
