--- a/Core_PetBoarding_Backend/PetBoarding_Infrastructure/PetBoarding_Infrastructure.csproj
+++ b/Core_PetBoarding_Backend/PetBoarding_Infrastructure/PetBoarding_Infrastructure.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\PetBoarding_Domain\PetBoarding_Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="Email\Templates\*.html" />
+  </ItemGroup>
+
 </Project>
