Ajout des tests d'intégration pour le projet persitence + déplacement physique des projets de tests.

--- a/Core_PetBoarding_Backend/Tests/UnitTests/DomainUnitTests/DomainUnitTests.csproj
+++ b/Core_PetBoarding_Backend/Tests/UnitTests/DomainUnitTests/DomainUnitTests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core_PetBoarding_Backend\PetBoarding_Domain\PetBoarding_Domain.csproj" />
+    <ProjectReference Include="..\..\..\PetBoarding_Domain\PetBoarding_Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
