--- a/Core_PetBoarding_Backend/docker-compose.yml
+++ b/Core_PetBoarding_Backend/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - ASPNETCORE_URLS=https://+:5001;http://+:5000
       - ASPNETCORE_Kestrel__Certificates__Default__Password=password123
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+      - SIGNOZ_OTEL_ENDPOINT=http://signoz-otel-collector:4317
+      - OTEL_SERVICE_NAME=PetBoarding.Api
+      - OTEL_RESOURCE_ATTRIBUTES=service.name=PetBoarding.Api,service.version=1.0.0
     ports:
       - '5000:5000'
       - '5001:5001'
@@ -22,6 +25,8 @@ services:
         condition: service_started
       rabbitmq:
         condition: service_healthy
+      signoz-otel-collector:
+        condition: service_started
     restart: unless-stopped
 
   petboarding_taskworker:
@@ -36,11 +41,16 @@ services:
       - TaskWorker__ExpiredBasketCleanupIntervalMinutes=10
       - TaskWorker__BasketExpirationMinutes=30
       - TaskWorker__ExpiredReservationProcessingIntervalMinutes=15
+      - SIGNOZ_OTEL_ENDPOINT=http://signoz-otel-collector:4317
+      - OTEL_SERVICE_NAME=PetBoarding.TaskWorker
+      - OTEL_RESOURCE_ATTRIBUTES=service.name=PetBoarding.TaskWorker,service.version=1.0.0
     depends_on:
       postgres.database:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+      signoz-otel-collector:
+        condition: service_started
     restart: unless-stopped
     deploy:
       replicas: 1
@@ -89,4 +99,62 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+    restart: unless-stopped
+
+  # SigNoz Services
+  clickhouse:
+    image: clickhouse/clickhouse-server:23.7
+    container_name: signoz-clickhouse
+    hostname: clickhouse
+    ports:
+      - "9000:9000"
+      - "8123:8123"
+    volumes:
+      - ./.containers/signoz-clickhouse:/var/lib/clickhouse
+    environment:
+      - CLICKHOUSE_DB=signoz
+    restart: unless-stopped
+
+  signoz-otel-collector:
+    image: signoz/signoz-otel-collector:0.88.11
+    container_name: signoz-otel-collector
+    hostname: otel-collector
+    command: ["--config=/etc/otelcol-contrib/otel-collector-config.yaml"]
+    volumes:
+      - ./signoz/otel-collector-config.yaml:/etc/otelcol-contrib/otel-collector-config.yaml
+    ports:
+      - "4317:4317"   # OTLP gRPC receiver
+      - "4318:4318"   # OTLP HTTP receiver
+      - "8889:8889"   # Prometheus metrics
+    depends_on:
+      - clickhouse
+    restart: unless-stopped
+
+  signoz-query-service:
+    image: signoz/query-service:0.39.0
+    container_name: signoz-query-service
+    hostname: query-service
+    command: ["-config=/root/config/prometheus.yml"]
+    volumes:
+      - ./signoz/prometheus.yml:/root/config/prometheus.yml
+    environment:
+      - ClickHouseUrl=tcp://clickhouse:9000
+      - STORAGE=clickhouse
+      - GODEBUG=netdns=go
+    ports:
+      - "8080:8080"
+    depends_on:
+      - clickhouse
+    restart: unless-stopped
+
+  signoz-frontend:
+    image: signoz/frontend:0.39.0
+    container_name: signoz-frontend
+    hostname: frontend
+    ports:
+      - "3301:3301"
+    environment:
+      - FRONTEND_API_ENDPOINT=http://signoz-query-service:8080
+    depends_on:
+      - signoz-query-service
     restart: unless-stopped
