--- a/Core_PetBoarding_Backend/signoz/otel-collector-config.yaml
+++ b/Core_PetBoarding_Backend/signoz/otel-collector-config.yaml
@@ -6,14 +6,6 @@ receivers:
       http:
         endpoint: 0.0.0.0:4318
 
-  prometheus:
-    config:
-      scrape_configs:
-        - job_name: 'otel-collector'
-          scrape_interval: 10s
-          static_configs:
-            - targets: ['0.0.0.0:8889']
-
 processors:
   batch:
     timeout: 1s
@@ -23,48 +15,8 @@ processors:
     limit_mib: 512
 
 exporters:
-  clickhouse:
-    endpoint: tcp://clickhouse:9000?dial_timeout=10s&compress=lz4
-    database: signoz_traces
-    traces_table_name: signoz_traces
-    operations_table_name: signoz_operations
-    index_table_name: signoz_index_v2
-    span_attributes_table_name: signoz_span_attributes
-    span_attributes_keys_table_name: signoz_span_attributes_keys
-    resource_attributes_table_name: signoz_resource_attributes
-    resource_attributes_keys_table_name: signoz_resource_attributes_keys
-    timeout: 5s
-    retry_on_failure:
-      enabled: true
-      initial_interval: 5s
-      max_interval: 30s
-      max_elapsed_time: 300s
-
-  clickhouse/metrics:
-    endpoint: tcp://clickhouse:9000?dial_timeout=10s&compress=lz4
-    database: signoz_metrics
-    metrics_table_name: distributed_samples_v2
-    time_series_table_name: distributed_time_series_v2
-    timeout: 5s
-    retry_on_failure:
-      enabled: true
-      initial_interval: 5s
-      max_interval: 30s
-      max_elapsed_time: 300s
-
-  clickhouse/logs:
-    endpoint: tcp://clickhouse:9000?dial_timeout=10s&compress=lz4
-    database: signoz_logs
-    logs_table_name: distributed_logs
-    timeout: 5s
-    retry_on_failure:
-      enabled: true
-      initial_interval: 5s
-      max_interval: 30s
-      max_elapsed_time: 300s
-
-  prometheus:
-    endpoint: "0.0.0.0:8889"
+  logging:
+    loglevel: info
 
 service:
   extensions: []
@@ -72,20 +24,18 @@ service:
     traces:
       receivers: [otlp]
       processors: [memory_limiter, batch]
-      exporters: [clickhouse]
+      exporters: [logging]
     
     metrics:
-      receivers: [otlp, prometheus]
+      receivers: [otlp]
       processors: [memory_limiter, batch]
-      exporters: [clickhouse/metrics, prometheus]
+      exporters: [logging]
     
     logs:
       receivers: [otlp]
       processors: [memory_limiter, batch]
-      exporters: [clickhouse/logs]
+      exporters: [logging]
 
   telemetry:
     logs:
       level: info
-    metrics:
-      address: 0.0.0.0:8889
