--- a/Core_PetBoarding_Backend/signoz/otel-collector-config.yaml
+++ b/Core_PetBoarding_Backend/signoz/otel-collector-config.yaml
@@ -3,39 +3,183 @@ receivers:
     protocols:
       grpc:
         endpoint: 0.0.0.0:4317
+        # Configuration gRPC spécifique
+        max_recv_msg_size: 4194304 # 4MB
+        max_concurrent_streams: 16
+        read_buffer_size: 524288 # 512KB
+        write_buffer_size: 524288 # 512KB
+        keepalive:
+          server_parameters:
+            max_connection_idle: 11s
+            max_connection_age: 12s
+            max_connection_age_grace: 13s
+            time: 30s
+            timeout: 5s
+          enforcement_policy:
+            min_time: 10s
+            permit_without_stream: true
+        # Authentification pour standalone
+        auth:
+          authenticator: noop
       http:
         endpoint: 0.0.0.0:4318
+        cors:
+          allowed_origins:
+            - http://localhost:*
+            - https://localhost:*
+
+  # Ajout pour monitorer l'host Docker
+  hostmetrics:
+    collection_interval: 60s
+    scrapers:
+      cpu:
+        metrics:
+          system.cpu.utilization:
+            enabled: true
+      memory:
+        metrics:
+          system.memory.utilization:
+            enabled: true
+      load: {}
+      disk: {}
+      filesystem:
+        exclude_fs_types:
+          fs_types: ['autofs', 'binfmt_misc', 'bpf', 'cgroup2', 'configfs']
+          match_type: strict
+      network: {}
+
+  prometheus:
+    config:
+      scrape_configs:
+        - job_name: 'otel-collector'
+          scrape_interval: 10s
+          static_configs:
+            - targets: ['0.0.0.0:8889']
+        - job_name: 'petboarding-api'
+          scrape_interval: 30s
+          static_configs:
+            - targets: ['petboarding_api:5000']
 
 processors:
   batch:
     timeout: 1s
     send_batch_size: 1024
+    send_batch_max_size: 2048
+
   memory_limiter:
     check_interval: 1s
     limit_mib: 512
+    spike_limit_mib: 128
+
+  # Ajout pour enrichir les données
+  resource:
+    attributes:
+      - key: service.name
+        from_attribute: service.name
+        action: upsert
+      - key: deployment.environment
+        value: 'development'
+        action: upsert
+      - key: service.namespace
+        value: 'petboarding'
+        action: upsert
+
+  # Filtrage des métriques sensibles
+  filter:
+    metrics:
+      exclude:
+        match_type: regexp
+        metric_names:
+          - '.*password.*'
+          - '.*secret.*'
+          - '.*token.*'
 
 exporters:
+  # Configuration ClickHouse pour SigNoz standalone
+  clickhouse:
+    endpoint: tcp://clickhouse:9000?dial_timeout=10s&compress=lz4
+    database: signoz_traces
+    traces_table_name: signoz_traces
+    operations_table_name: signoz_operations
+    index_table_name: signoz_index_v2
+    span_attributes_table_name: signoz_span_attributes
+    span_attributes_keys_table_name: signoz_span_attributes_keys
+    resource_attributes_table_name: signoz_resource_attributes
+    resource_attributes_keys_table_name: signoz_resource_attributes_keys
+    timeout: 5s
+    retry_on_failure:
+      enabled: true
+      initial_interval: 5s
+      max_interval: 30s
+      max_elapsed_time: 300s
+
+  clickhouse/metrics:
+    endpoint: tcp://clickhouse:9000?dial_timeout=10s&compress=lz4
+    database: signoz_metrics
+    metrics_table_name: distributed_samples_v2
+    time_series_table_name: distributed_time_series_v2
+    timeout: 5s
+    retry_on_failure:
+      enabled: true
+      initial_interval: 5s
+      max_interval: 30s
+      max_elapsed_time: 300s
+
+  clickhouse/logs:
+    endpoint: tcp://clickhouse:9000?dial_timeout=10s&compress=lz4
+    database: signoz_logs
+    logs_table_name: distributed_logs
+    timeout: 5s
+    retry_on_failure:
+      enabled: true
+      initial_interval: 5s
+      max_interval: 30s
+      max_elapsed_time: 300s
+
+  # Export vers console pour debugging
   logging:
     loglevel: info
+    sampling_initial: 5
+    sampling_thereafter: 200
+
+  prometheus:
+    endpoint: '0.0.0.0:8889'
+    namespace: 'petboarding'
+    const_labels:
+      environment: 'development'
+
+# Ajout d'extensions essentielles
+extensions:
+  health_check:
+    endpoint: 0.0.0.0:13133
+  pprof:
+    endpoint: 0.0.0.0:1777
+  zpages:
+    endpoint: 0.0.0.0:55679
 
 service:
-  extensions: []
+  extensions: [health_check, pprof, zpages]
+
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
-      exporters: [logging]
-    
+      processors: [memory_limiter, resource, batch]
+      exporters: [clickhouse, logging]
+
     metrics:
-      receivers: [otlp]
-      processors: [memory_limiter, batch]
-      exporters: [logging]
-    
+      receivers: [otlp, hostmetrics, prometheus]
+      processors: [memory_limiter, resource, filter, batch]
+      exporters: [clickhouse/metrics, prometheus, logging]
+
     logs:
       receivers: [otlp]
-      processors: [memory_limiter, batch]
-      exporters: [logging]
+      processors: [memory_limiter, resource, batch]
+      exporters: [clickhouse/logs, logging]
 
   telemetry:
     logs:
       level: info
+      development: true
+    metrics:
+      address: 0.0.0.0:8888
+      level: detailed
