Ajout de Jaeger (Traces) + Serielog/Seq pour les logs

--- a/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.Development.json
+++ b/Core_PetBoarding_Backend/PetBoarding_Api/appsettings.Development.json
@@ -23,7 +23,7 @@
     "Audience": "Api"
   },
   "RabbitMQ": {
-    "Host": "localhost",
+    "Host": "rabbitmq",
     "Port": 5672,
     "Username": "petboarding",
     "Password": "petboarding123",
