--- a/Core_PetBoarding_Backend/PetBoarding_TaskWorker/appsettings.Development.json
+++ b/Core_PetBoarding_Backend/PetBoarding_TaskWorker/appsettings.Development.json
@@ -19,7 +19,7 @@
     "EnableSensitiveDataLogging": true
   },
   "RabbitMQ": {
-    "Host": "localhost",
+    "Host": "rabbitmq",
     "Port": 5672,
     "Username": "petboarding",
     "Password": "petboarding123",
