Mise à jour de l'adresse de memcached dans le docker-compose.

--- a/Core_PetBoarding_Backend/PetBoarding_TaskWorker/appsettings.Development.json
+++ b/Core_PetBoarding_Backend/PetBoarding_TaskWorker/appsettings.Development.json
@@ -9,8 +9,8 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Host=localhost:5432;Database=petboarding;Username=postgres;Password=postgres",
-    "Memcached": "localhost:11211"
+    "Database": "Host=petboarding.postgres.database;Port=5432;Database=petboarding;Username=postgres;Password=postgres",
+    "Memcached": "memcached:11211"
   },
   "DatabaseOptions": {
     "MaxRetry": 3,
