--- a/Core_PetBoarding_Backend/docker-compose.yml
+++ b/Core_PetBoarding_Backend/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - JAEGER_ENDPOINT=http://jaeger:4317
       - SEQ_URL=http://seq
       - OTEL_SERVICE_NAME=PetBoarding.Api
+      - ConnectionStrings__Memcached=memcached:11211
     ports:
       - '5000:5000'
       - '5001:5001'
@@ -65,6 +66,7 @@ services:
       - JAEGER_ENDPOINT=http://jaeger:4317
       - SEQ_URL=http://seq
       - OTEL_SERVICE_NAME=PetBoarding.TaskWorker
+      - ConnectionStrings__Memcached=memcached:11211
     depends_on:
       petboarding_api:
         condition: service_started
